2000-03-01  Tom Yu  <tlyu@mit.edu>

	* pre.in (INSTALL_SHLIB): New variable.

	* lib.in (install-shared): Use $(INSTALL_SHLIB)

2000-02-15  Tom Yu  <tlyu@mit.edu>

	* libobj.in: Fix up .c.so and .c.po rules to include $(CFLAGS),
	which were previously missing.

2000-02-04  Tom Yu  <tlyu@mit.edu>

	* pre.in: Add KRB524_DEPLIB and KRB524_LIB

2000-01-27  Ken Raeburn  <raeburn@mit.edu>

	* pre.in (KADM_COMM_LIBS): Drop krb5util library.

1999-12-03  Danilo Almeida  <dalmeida@mit.edu>

	* win-pre.in: Pull changes from krb5-1-1 branch: a) Make is so
	that all C flags are the same and so that the only difference
	between EXE and DLL builds are the DLL_LINKOPTS and EXE_LINKOPTS
	linker options.  b) Fix DNS error messages to wshelper instead of
	version server.  c) Fix DNS flags it does not try to depend on mit
	dir.  Define NULL so we can do directory existence checks via the
	shell under both NT and 9x.

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-09-01  Ken Raeburn  <raeburn@mit.edu>

	* config.guess: Recognize Rhapsody OS.
	* config.sub: Recognize OS name "rhapsody*".

	* post.in (*-recurse): If an error occurs when using -k, report an
	error after finishing all the subdirectories.

1999-08-13  Brad Thompson  <yak@mit.edu>

	* config.sub: Now recognizes MacOS 10 as a valid OS.

1999-07-30  Ken Raeburn  <raeburn@mit.edu>

	* config.guess: Add MacOS 10 support.  (Submitted to autoconf
	maintainers.)

1999-07-22  Tom Yu  <tlyu@mit.edu>

	* mkinstalldirs: New file; from autoconf-2.13.

	* config.guess, config.sub, install-sh: Update from autoconf-2.13.

Tue May 18 20:06:01 1999  Danilo Almeida  <dalmeida@mit.edu>

	* win-pre.in, win-pre.in: Remove trailing backslash from output